final primeira aula

--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,25 @@
-*{
+* {
   box-sizing: border-box;
-  font-family: 'Roboto',sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
-:root{
-  --primeary: #2A7AE4;
+
+:root {
+  --primary: #2A7AE4;
   --black: #000000;
-  --blackLighter: #9e9e9e;
+  --blackLighter: #9E9E9E;
   --grayLight: #F5F5F5;
-  --graymedium: #E5E5E5;
-  --white:#ffffff;
-  --frontEnd: #68D1FF;
+  --grayMedium: #e5e5e5; 
+  --white: #FFFFFF;
+  --frontEnd: #6BD1FF;
   --backEnd: #00C86F;
 }
-html,body{
-  margin:0;
-  padding:0;
+
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
-a{
-  color:inherit;
-}
+
+a {
+  color: inherit;
+} 
